gradle-plugin/it/src/it/route-name-fragment/expected/openshift.yml
---
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      jkube.eclipse.org/git-commit: "@ignore@"
      jkube.eclipse.org/git-url: "@ignore@"
      app.openshift.io/vcs-ref: "@ignore@"
      app.openshift.io/vcs-uri: "@ignore@"
      jkube.eclipse.org/git-branch: "@ignore@"
    labels:
      app: route-name-fragment
      provider: jkube
      version: "@ignore@"
      group: org.eclipse.jkube.integration.tests.gradle
    name: customized-name
  spec:
    ports:
    - name: http
      port: 9090
      protocol: TCP
      targetPort: 8080
    selector:
      app: route-name-fragment
      provider: jkube
      group: org.eclipse.jkube.integration.tests.gradle
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    annotations:
      jkube.eclipse.org/git-commit: "@ignore@"
      jkube.eclipse.org/git-url: "@ignore@"
      app.openshift.io/vcs-ref: "@ignore@"
      app.openshift.io/vcs-uri: "@ignore@"
      jkube.eclipse.org/git-branch: "@ignore@"
    labels:
      app: route-name-fragment
      provider: jkube
      version: "@ignore@"
      group: org.eclipse.jkube.integration.tests.gradle
    name: route-name-fragment
  spec:
    replicas: 1
    revisionHistoryLimit: 2
    selector:
      app: route-name-fragment
      provider: jkube
      group: org.eclipse.jkube.integration.tests.gradle
    strategy:
      rollingParams:
        timeoutSeconds: 3600
      type: Rolling
    template:
      metadata:
        annotations:
          jkube.eclipse.org/git-commit: "@ignore@"
          jkube.eclipse.org/git-url: "@ignore@"
          app.openshift.io/vcs-ref: "@ignore@"
          app.openshift.io/vcs-uri: "@ignore@"
          jkube.eclipse.org/git-branch: "@ignore@"
        labels:
          app: route-name-fragment
          provider: jkube
          version: "@ignore@"
          group: org.eclipse.jkube.integration.tests.gradle
        name: route-name-fragment
      spec:
        containers:
        - env:
          - name: KUBERNETES_NAMESPACE
            valueFrom:
              fieldRef:
                fieldPath: metadata.namespace
          image: repository/route-name-fragment:latest
          imagePullPolicy: IfNotPresent
          name: repository-route-name-fragment
          ports:
          - containerPort: 8080
            name: http
            protocol: TCP
          securityContext:
            privileged: false
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - repository-route-name-fragment
        from:
          kind: ImageStreamTag
          name: route-name-fragment:latest
      type: ImageChange
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      jkube.eclipse.org/git-commit: "@ignore@"
      jkube.eclipse.org/git-url: "@ignore@"
      app.openshift.io/vcs-ref: "@ignore@"
      app.openshift.io/vcs-uri: "@ignore@"
      jkube.eclipse.org/git-branch: "@ignore@"
    labels:
      app: route-name-fragment
      provider: jkube
      version: "@ignore@"
      group: org.eclipse.jkube.integration.tests.gradle
    name: customized-name
  spec:
    port:
      targetPort: 8080
    to:
      kind: Service
      name: customized-name
